--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <p>This is a picture of Mr.Bean, The actor is named Rowan Atkinson</p>
-        <img alt="Qries" src="https://images2.minutemediacdn.com/image/upload/c_crop,h_726,w_1292,x_199,y_0/v1578352479/shape/mentalfloss/62455-shout-factory1.jpg?itok=WDFGKalT"width=150" height="70">
+        <img alt="Qries" src="https://images2.minutemediacdn.com/image/upload/c_crop,h_726,w_1292,x_199,y_0/v1578352479/shape/mentalfloss/62455-shout-factory1.jpg?itok=WDFGKalT
+        "width=800" height="500">
     </body>
     </html>
